2XL - Moved from quirks to standard mode. Added manifest. Fixed width on iOS devices

--- a/2xl/2xl.css
+++ b/2xl/2xl.css
@@ -1,3 +1,15 @@
 #content {
     text-align: center;
 }
+
+#svg2xl {
+    height: 90vh;
+}
+
+.artwork {
+    background: black;
+    display: inline-block;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 20px;
+}
